@@ -127,17 +127,16 @@
 <context>
     <name>BankDelegate</name>
     <message>
-        <location filename="../qml/pages/BankDelegate.qml" line="34"/>
+        <location filename="../qml/pages/BankDelegate.qml" line="35"/>
         <source>Add transaction</source>
         <translation>Aggiungi transazione</translation>
     </message>
     <message>
-        <location filename="../qml/pages/BankDelegate.qml" line="43"/>
         <source>Show transactions</source>
-        <translation>Visualizza transazioni</translation>
+        <translation type="obsolete">Visualizza transazioni</translation>
     </message>
     <message>
-        <location filename="../qml/pages/BankDelegate.qml" line="47"/>
+        <location filename="../qml/pages/BankDelegate.qml" line="50"/>
         <source>Edit account</source>
         <translation>Modifica conto</translation>
     </message>
