@@ -151,17 +151,16 @@
 <context>
     <name>BankDelegate</name>
     <message>
-        <location filename="../qml/pages/BankDelegate.qml" line="34"/>
+        <location filename="../qml/pages/BankDelegate.qml" line="35"/>
         <source>Add transaction</source>
         <translation>Ny transaktion</translation>
     </message>
     <message>
-        <location filename="../qml/pages/BankDelegate.qml" line="43"/>
         <source>Show transactions</source>
-        <translation>Visa transaktioner</translation>
+        <translation type="obsolete">Visa transaktioner</translation>
     </message>
     <message>
-        <location filename="../qml/pages/BankDelegate.qml" line="47"/>
+        <location filename="../qml/pages/BankDelegate.qml" line="50"/>
         <source>Edit account</source>
         <translation>Ändra kontonamn</translation>
     </message>
