@@ -1,6 +1,8 @@
 Version 0.0.5
 
   * Allow edit account incoming saldo
+  * Accountpage remove show transactions from remorse popup
+  * Accountpage show transactions when click account
 
 Version 0.0.4
 
